--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "grunt-contrib-watch": "~0.5.3",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-contrib-clean": "0.5.x",
-    "grunt-wp-deploy": "0.3.x",
+    "grunt-wp-deploy": "0.3.x"
   },
   "engines": {
     "node": ">=0.8.0",
