--- a/assets/font/config.json
+++ b/assets/font/config.json
@@ -55,6 +55,12 @@
       "src": "fontawesome"
     },
     {
+      "uid": "e82cedfa1d5f15b00c5a81c9bd731ea2",
+      "css": "info-circled",
+      "code": 59432,
+      "src": "fontawesome"
+    },
+    {
       "uid": "0ddd3e8201ccc7d41f7b7c9d27eca6c1",
       "css": "link",
       "code": 59401,
