--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "grunt-contrib-less": "~0.9.0",
     "grunt-contrib-uglify": "~0.9.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-shell": "~0.6.4"
+    "grunt-shell": "~0.6.4",
+    "grunt-wp-readme-to-markdown": "^2.0.0"
   },
   "engines": {
     "node": ">=0.8.0",
