--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "grunt-contrib-less": "~1.2.0",
     "grunt-contrib-uglify": "~0.9.2",
     "grunt-contrib-watch": "~0.5.3",
+    "grunt-wp-i18n": "^0.5.4"
     "grunt-wp-readme-to-markdown": "^2.0.0"
   },
   "engines": {
