--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/mixtape"]
 	path = lib/mixtape
-	url = git@github.com:Automattic/mixtape.git
+	url = https://github.com/Automattic/mixtape.git
