Ingore lib/wpjm_rest

--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,10 @@ sftp-config.json
 /vendor/
 /tmp/
 
+# Ignore lib/wpjm_rest but keep folder
+lib/wpjm_rest/*
+!lib/wpjm_rest/.gitkeep
+
 # Ignore all log files except for .htaccess
 /logs/*
 !/logs/.htaccess
