REST API Settings: Return all settings on POST. Update mixtape sha

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -19,6 +19,7 @@
     <testsuites>
         <testsuite name="WPJM Test Suite">
             <directory prefix="test_class." suffix=".php">tests/php/tests</directory>
+            <directory prefix="test_class." suffix=".php" phpVersion="5.3.0" phpVersionOperator=">=">tests/php/tests/includes/rest-api</directory>
         </testsuite>
     </testsuites>
     <filter>
