--- a/package.json
+++ b/package.json
@@ -19,9 +19,14 @@
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
+    "eslint": "^4.3.0",
+    "eslint-config-wpcalypso": "^0.8.0",
+    "eslint-plugin-react": "^7.1.0",
+    "eslint-plugin-wpcalypso": "^3.4.0",
     "grunt": "~1.0.1",
     "grunt-checkbranch": "^1.0.4",
     "grunt-checkrepo": "^0.1.0",
