--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "grunt-wp-i18n": "~0.5.4",
     "grunt-wp-readme-to-markdown": "^2.0.0",
     "grunt-zip": "^0.17.1",
-    "mixtape": "git+https://github.com/Automattic/mixtape.git#ce7e91"
+    "mixtape": "git+https://github.com/Automattic/mixtape.git#3a84400af7fd0004102f7f63a50d2dd4f441e273"
   },
   "engines": {
     "node": ">=0.8.0",
