--- a/composer.json
+++ b/composer.json
@@ -5,6 +5,8 @@
   "type"       : "wordpress-plugin",
   "license"    : "GPL-3.0+",
   "require-dev"    : {
-    "phpunit/phpunit": "^5.7"
+    "phpunit/phpunit": "^5.7",
+    "wp-coding-standards/wpcs": "^0.14.0",
+    "dealerdirect/phpcodesniffer-composer-installer": "^0.4.4"
   }
 }
