--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "repository": "automattic/wp-job-manager",
   "main": "Gruntfile.js",
   "devDependencies": {
+    "@wordpress/babel-preset-default": "^1.1.2",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-loader": "^7.1.2",
