Update the grunt-contrib-watch library to 1.1.0

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "grunt-contrib-less": "~1.4.0",
     "grunt-contrib-sass": "~1.0.0",
     "grunt-contrib-uglify": "~3.0.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-gitinfo": "^0.1.8",
     "grunt-phpcs": "^0.4.0",
     "grunt-phpunit": "^0.3.6",
