--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "~2.2.0",
     "grunt-contrib-jshint": "~1.1.0",
-    "grunt-contrib-less": "~1.4.0",
+    "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-sass": "~1.0.0",
     "grunt-contrib-uglify": "~3.0.0",
     "grunt-contrib-watch": "^1.1.0",
