--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "~2.2.0",
     "grunt-contrib-jshint": "~1.1.0",
-    "grunt-contrib-less": "~1.4.0",
+    "grunt-contrib-less": "^2.0.0",
     "grunt-contrib-sass": "~1.0.0",
     "grunt-contrib-uglify": "~3.0.0",
-    "grunt-contrib-watch": "~1.0.0",
+    "grunt-contrib-watch": "^1.1.0",
     "grunt-gitinfo": "^0.1.8",
     "grunt-phpcs": "^0.4.0",
     "grunt-phpunit": "^0.3.6",
@@ -28,7 +28,7 @@
     "grunt-shell": "^2.1.0",
     "grunt-stylelint": "^0.6.0",
     "grunt-wp-deploy": "^1.2.1",
-    "grunt-wp-i18n": "~0.5.4",
+    "grunt-wp-i18n": "^1.0.2",
     "grunt-wp-readme-to-markdown": "^2.0.0",
     "grunt-zip": "^0.17.1",
     "mixtape": "git+https://github.com/Automattic/mixtape.git#faca4e486ae88661bd642c1b44e058b9bc461fa2"
