--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "grunt-wp-readme-to-markdown": "^2.0.0",
     "grunt-zip": "^0.17.1",
     "lodash-webpack-plugin": "^0.11.5",
+    "mini-css-extract-plugin": "^0.4.0",
     "mixtape": "git+https://github.com/Automattic/mixtape.git#faca4e486ae88661bd642c1b44e058b9bc461fa2",
     "node-sass": "^4.9.0",
     "rimraf": "^2.6.2",
