Run linter as part of the build

--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "repository": "automattic/wp-job-manager",
   "main": "Gruntfile.js",
   "scripts": {
-    "build": "cross-env BABEL_ENV=default webpack --mode=production",
+    "build": "npm run lint && cross-env BABEL_ENV=default webpack --mode=production",
     "clean": "rimraf build",
-    "dev": "cross-env BABEL_ENV=default webpack --mode=development --watch",
+    "dev": "npm run lint && cross-env BABEL_ENV=default webpack --mode=development --watch",
     "lint": "eslint --ext js,jsx assets/blocks"
   },
   "devDependencies": {
