--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ branches:
 # Next we define our matrix of additional build configurations to test against.
 matrix:
   include:
+  # Uncomment this once there are JavaScript tests.
+  # - env: WP_TRAVISCI="npm test"
   - php: "5.2"
     dist: precise
     env: WP_VERSION=latest
