--- a/package.json
+++ b/package.json
@@ -18,62 +18,62 @@
 		"reformat-files-js": "./node_modules/.bin/prettier --ignore-path .eslintignore --write \"**/*.{js,jsx,json,ts,tsx}\""
 	},
 	"devDependencies": {
-		"@wordpress/babel-preset-default": "^4.10.0",
-		"@wordpress/jest-preset-default": "^4.2.0",
-		"babel-core": "^6.26.3",
-		"babel-eslint": "^9.0.0",
-		"babel-loader": "^7.1.5",
-		"babel-plugin-lodash": "^3.3.4",
-		"babel-plugin-transform-class-properties": "^6.24.1",
-		"clean-webpack-plugin": "^0.1.19",
-		"cross-env": "^5.2.0",
-		"css-loader": "^2.1.1",
-		"eslint": "^5.16.0",
-		"eslint-config-wordpress": "^2.0.0",
-		"eslint-plugin-jsx-a11y": "^6.2.1",
-		"eslint-plugin-react": "^7.18.3",
-		"eslint-plugin-wordpress": "git://github.com/WordPress-Coding-Standards/eslint-plugin-wordpress.git#1774343f6226052a46b081e01db3fca8793cc9f1",
-		"extend": ">=3.0.2",
-		"grunt": "^1.0.4",
-		"grunt-checkbranch": "^1.0.4",
-		"grunt-checkrepo": "^0.1.0",
-		"grunt-checktextdomain": "~1.0.0",
-		"grunt-contrib-clean": "^1.1.0",
-		"grunt-contrib-copy": "^1.0.0",
-		"grunt-contrib-cssmin": "~2.2.0",
-		"grunt-contrib-jshint": "~1.1.0",
-		"grunt-contrib-less": "^2.0.0",
-		"grunt-contrib-uglify": "~3.0.0",
-		"grunt-contrib-watch": "^1.1.0",
-		"grunt-gitinfo": "^0.1.9",
-		"grunt-phpunit": "^0.3.6",
-		"grunt-shell": "^2.1.0",
-		"grunt-wp-deploy": "^2.0.0",
-		"grunt-wp-i18n": "^1.0.3",
-		"grunt-wp-readme-to-markdown": "^2.0.0",
-		"grunt-zip": "^0.17.1",
-		"jest": "^24.8.0",
-		"lodash-webpack-plugin": "^0.11.5",
-		"merge": ">=1.2.1",
-		"mini-css-extract-plugin": "^0.4.5",
-		"node-sass": "^4.13.1",
-		"prettier": "https://github.com/Automattic/wp-prettier/releases/download/wp-1.17.0/wp-prettier-1.17.0.tgz",
-		"rimraf": "^2.6.3",
-		"sass-loader": "^7.1.0",
-		"style-loader": "^0.21.0",
-		"tar": "^4.4.10",
-		"webpack": "^4.41.6",
-		"webpack-cli": "^3.3.11"
+		"@wordpress/babel-preset-default": "4.17.0",
+		"@wordpress/eslint-plugin": "7.1.0",
+		"@wordpress/jest-preset-default": "6.2.0",
+		"babel-core": "6.26.3",
+		"babel-eslint": "10.1.0",
+		"babel-loader": "8.1.0",
+		"babel-plugin-lodash": "3.3.4",
+		"babel-plugin-transform-class-properties": "6.24.1",
+		"clean-webpack-plugin": "3.0.0",
+		"cross-env": "7.0.2",
+		"css-loader": "4.2.1",
+		"eslint": "7.6.0",
+		"eslint-config-wordpress": "2.0.0",
+		"eslint-plugin-jsx-a11y": "6.3.1",
+		"eslint-plugin-react": "7.20.5",
+		"extend": "3.0.2",
+		"grunt": "1.2.1",
+		"grunt-checkbranch": "1.0.4",
+		"grunt-checkrepo": "0.1.0",
+		"grunt-checktextdomain": "1.0.1",
+		"grunt-contrib-clean": "2.0.0",
+		"grunt-contrib-copy": "1.0.0",
+		"grunt-contrib-cssmin": "3.0.0",
+		"grunt-contrib-jshint": "2.1.0",
+		"grunt-contrib-less": "2.0.0",
+		"grunt-contrib-uglify": "5.0.0",
+		"grunt-contrib-watch": "1.1.0",
+		"grunt-gitinfo": "0.1.9",
+		"grunt-phpunit": "0.3.6",
+		"grunt-shell": "3.0.1",
+		"grunt-wp-deploy": "2.1.2",
+		"grunt-wp-i18n": "1.0.3",
+		"grunt-wp-readme-to-markdown": "2.0.1",
+		"grunt-zip": "0.18.2",
+		"jest": "26.2.2",
+		"lodash-webpack-plugin": "0.11.5",
+		"merge": "1.2.1",
+		"mini-css-extract-plugin": "0.9.0",
+		"node-sass": "4.14.1",
+		"prettier": "npm:wp-prettier@^2.0.5",
+		"rimraf": "3.0.2",
+		"sass-loader": "9.0.3",
+		"style-loader": "1.2.1",
+		"tar": "6.0.2",
+		"webpack": "4.44.1",
+		"webpack-cli": "3.3.12"
 	},
 	"engines": {
 		"node": ">=0.8.0",
 		"npm": ">=1.1.0"
 	},
 	"dependencies": {
-		"babel-preset-stage-3": "^6.24.1",
-		"diff": "^4.0.2",
-		"lodash": "^4.17.19",
-		"react": "^16.12.0",
-		"select2": "^4.0.13"
+		"babel-preset-stage-3": "6.24.1",
+		"diff": "4.0.2",
+		"lodash": "4.17.19",
+		"react": "16.13.1",
+		"select2": "4.0.13"
 	}
 }
