--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -14,6 +14,7 @@
 	<exclude-pattern>tests/</exclude-pattern>
 	<exclude-pattern>tmp/</exclude-pattern>
 	<exclude-pattern>build/</exclude-pattern>
+	<exclude-pattern>assets/dist/</exclude-pattern>
 
 	<!-- Temporarily exclude templates and lib for now -->
 	<exclude-pattern>templates/</exclude-pattern>
