Update PHP workflow to consider trunk as the default branch

--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -3,7 +3,7 @@ name: PHP Linting and Tests
 on:
   pull_request:
     branches:
-      - master
+      - trunk
       - 'feature/**'
       - 'release/**'
 
