--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "exclude": [
       "/*",
       "!/assets/dist",
-      "!/assets/images/company.png",
+      "!/assets/images",
       "!/assets/lib",
       "/assets/dist/css/*.js",
       "!/includes",
