--- a/composer.json
+++ b/composer.json
@@ -43,6 +43,9 @@
   "config": {
     "allow-plugins": {
       "dealerdirect/phpcodesniffer-composer-installer": true
+    },
+    "platform": {
+      "php": "7.4"
     }
   }
 }
