Add access token env

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -12,6 +12,8 @@ jobs:
     if: github.event.pull_request.merged == true && startsWith( github.head_ref, 'release/' )
     runs-on: ubuntu-latest
     name: WPJM Release
+    env:
+      GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - uses: shivammathur/setup-php@v2
