Fix wporg deploy

--- a/.github/workflows/deploy-wporg-release.yml
+++ b/.github/workflows/deploy-wporg-release.yml
@@ -20,7 +20,7 @@ jobs:
       - name: Build Plugin
         run: npm run build
       - name: Decompress plugin
-        run: unzip wp-job-manager.zip -d wp-job-manager
+        run: unzip wp-job-manager.zip
       - name: WordPress Plugin Deploy
         uses: 10up/action-wordpress-plugin-deploy@stable
         with:
