--- a/package.json
+++ b/package.json
@@ -53,8 +53,7 @@
     "test-php": "./vendor/bin/phpunit",
     "i18n:build": "npm run i18n:php",
     "i18n:php": "wp i18n make-pot --exclude=lib,build,vendor,node_modules --skip-js --headers='{\"Last-Translator\":null,\"Language-Team\":null,\"Report-Msgid-Bugs-To\":\"https://wordpress.org/support/plugin/wp-job-manager/\"}' . languages/wp-job-manager.pot",
-    "release": "./scripts/prepare-release.sh",
-    "release:create": "./scripts/create-release.sh"
+    "release": "./scripts/prepare-release.sh"
   },
   "lint-staged": {
     "*.php": [
