--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,4 +48,6 @@ jobs:
           path: ${{ github.workspace }}/wp-job-manager/
           retention-days: 7
       - name: Save plugin zip and add link to it in a comment 
+        env:
+          WPJMCOM_API_LOGIN: ${{ secrets.WPJMCOM_API_LOGIN }}
         run: node scripts/upload-and-link-plugin-zip.mjs --pr ${{ github.event.number }} --commit ${{ github.event.pull_request.head.sha }} ${{ github.event.pull_request.merged && '--merged' || '' }}
