--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -47,7 +47,7 @@ jobs:
           name: wp-job-manager-${{ github.event.pull_request.head.sha }}
           path: ${{ github.workspace }}/wp-job-manager/
           retention-days: 7
-      - name: Save plugin zip and add link to it in a comment 
+      - name: Save plugin zip and add link to the PR description
         env:
           WPJMCOM_API_LOGIN: ${{ secrets.WPJMCOM_API_LOGIN }}
           GH_TOKEN: ${{ github.token }}
