Pin down deploy action version, remove dry run flag

--- a/.github/workflows/create-release.yml
+++ b/.github/workflows/create-release.yml
@@ -38,9 +38,7 @@ jobs:
           node scripts/create-release.mjs wp-job-manager ${{ github.event.number }}
           unzip -q wp-job-manager.zip
       - name: Deploy to WordPress.org
-        uses: 10up/action-wordpress-plugin-deploy@stable
-        with:
-          dry-run: true
+        uses: 10up/action-wordpress-plugin-deploy@abb939a0d0bfd01063e8d1933833209201557381
         env:
           SVN_PASSWORD: ${{ secrets.WORDPRESSORG_SVN_PASSWORD }}
           SVN_USERNAME: ${{ secrets.WORDPRESSORG_SVN_USERNAME }}
